# onlycat-forked

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  launch-dev.sh  mise.toml  package-lock.json
backend/: Dockerfile  Dockerfile-production  config.js.example  index.js  package-lock.json  package.json  start-backend-server.sh
frontend/: .env.example  .env.production  Dockerfile  (+4 more)
onlycat-backend/: .dockerignore  .env.example  .gitignore  Dockerfile  main.py  manage.py  mise.toml  pyproject.toml
onlycat-backend/apps/post/: models.py  serializers.py  urls.py  views.py
onlycat-backend/apps/user/: enums.py  factories.py  models.py  serializers.py  tests.py  token.py  urls.py  validators.py  views.py
onlycat-backend/apps/user/models/: __init__.py  log.py  user.py
onlycat-backend/apps/user/models/enums/: __init__.py
onlycat-backend/apps/user/serializers/: __init__.py
onlycat-backend/apps/user/serializers/fields/: __init__.py
onlycat-backend/apps/user/tests/: test_register.py  test_user_change_email.py  test_user_change_password.py  test_user_public.py  test_user_self.py
onlycat-backend/apps/user/utils/: __init__.py  log.py  token.py
onlycat-backend/apps/user/views/: __init__.py  auth.py  private.py  public.py
onlycat-backend/frameworks/base/: decorators.py  paginations.py  permissions.py
onlycat-backend/frameworks/base/models/: __init__.py
onlycat-backend/onlycat_backend/: asgi.py  urls.py  wsgi.py
onlycat-backend/onlycat_backend/settings/: __init__.py  database.py  drf_spectacular.py  locale.py  rest_framework.py
(+28 files in other folders)
