[project]
name = "onlycat-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2",
    "django-cors-headers>=4.7.0",
    "django-currentuser>=0.9.0",
    "django-extensions>=4.1",
    "django-filter>=25.1",
    "djangorestframework>=3.16.0",
    "drf-spectacular>=0.28.0",
    "factory-boy>=3.3.3",
    "freezegun>=1.5.2",
    "markdown>=3.8",
    "pillow>=11.2.1",
    "psycopg[binary]>=3.2.7",
    "python-dotenv>=1.1.0",
]

[dependency-groups]
test = [
    "pytest-django>=4.11.1",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "onlycat_backend.settings"
python_files = ["tests.py", "test_*.py", "*_test.py", "tests/*.py"]
